<resources>
    <string name="app_name">Weather Watcher</string>
    <string name="home_fragment">Home</string>
    <string name="favorites_fragment">Favorites</string>
    <string name="alerts_fragment">Alerts</string>
    <string name="settings_fragment">Settings</string>
    <string name="unknown">Unknown</string>
    <string name="daytime_icon">daytime icon</string>
    <string name="location_unknown">Location Unknown</string>
    <string name="to">To</string>
    <string name="hpa">hpa</string>
    <string name="something_went_wrong">something went wrong, please try again later</string>
    <string name="initial_setup">Initial Setup</string>
    <string name="location">Location</string>
    <string name="gps">GPS</string>
    <string name="map">Map</string>
    <string name="notifications">Notifications</string>
    <string name="ok">OK</string>
    <string name="unable_to_fetch_your_location">Unable to fetch your location</string>
    <string name="please_allow_access_to_your_location">Please allow Access to your location.</string>
    <string name="allow">Allow</string>
    <string name="temperature">Temperature</string>
    <string name="celsius">Celsius</string>
    <string name="kelvin">Kelvin</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="language">Language</string>
    <string name="en">English</string>
    <string name="ar">Arabic</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="meter_per_second">Meter / Sec</string>
    <string name="miles_per_hour">Miles / Hour</string>
    <string name="you_clicked_here">You clicked here</string>
    <string name="location_is">Location Is:</string>
    <string name="location_query_hint">Alexandria</string>
    <string name="couldnt_get_location_name">Couldn\'t get location name</string>
    <string name="you_must_pick_location">You must pick a location from the map.\nLocation reverted to GPS</string>
    <string name="couldnt_get_cities">couldn\'t get cities</string>
    <string name="no_alerts">You haven\'t added any alerts yet.\nyou can add some by pressing the plus button</string>
    <string name="delete">Delete</string>
    <string name="alert_channel_name">Notifications Channel</string>
    <string name="notifications_denied">Enable Notifications Permission</string>
    <string name="enable_notifications_button">Enable Permissions</string>
    <string name="dont_forget_to_check_weather">Don\'t forget to check weather today!</string>
    <string name="permissions_denied">Permission Denied</string>
    <string name="hi">Hi!</string>
    <string name="alert_channel_description">Used for weather notification</string>
    <string name="from">From</string>
    <string name="save">Save</string>
    <string name="dismiss">Dismiss</string>
    <string name="weather_is">"Weather Is\u0020"</string>
    <string name="couldnt_save_to_db">Couldn\'t save to Database</string>
    <string name="couldnt_get_data_from_db">Couldn\'t get data from database</string>
    <string name="couldnt_delete_from_db">Couldn\'t delete data from database</string>
    <string name="enable_alert_permisisons">Enable Alert Permissions</string>
    <string name="add_aborted">Add Aborted</string>

</resources>