<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/homeFragment"
            android:checkable="true"
            android:icon="@drawable/home_ic"
            android:title="@string/home_fragment" />
        <item
            android:id="@+id/favoritesFragment"
            android:checkable="true"
            android:icon="@drawable/favorite_ic"
            android:title="@string/favorites_fragment" />
        <item
            android:id="@+id/alertsFragment"
            android:checkable="true"
            android:icon="@drawable/alert_ic"
            android:title="@string/alerts_fragment" />
        <item
            android:id="@+id/settingsFragment"
            android:checkable="true"
            android:icon="@drawable/settings_ic"
            android:title="@string/settings_fragment" />
    </group>
</menu>