<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/blankFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.senseicoder.weatherwatcher.features.drawer.home.HomeFragment"
        android:label="@string/home_fragment"
        tools:layout="@layout/fragment_home" >
        <argument
            android:name="favoriteDTO"
            app:argType="com.senseicoder.weatherwatcher.models.FavoriteDTO"
            app:nullable="true"
            android:defaultValue="@null" />
    </fragment>
    <fragment
        android:id="@+id/favoritesFragment"
        android:name="com.senseicoder.weatherwatcher.features.drawer.favorites.FavoritesFragment"
        android:label="@string/favorites_fragment"
        tools:layout="@layout/fragment_favorites" />
    <fragment
        android:id="@+id/alertsFragment"
        android:name="com.senseicoder.weatherwatcher.features.drawer.alerts.AlertsFragment"
        android:label="@string/alerts_fragment"
        tools:layout="@layout/fragment_alerts" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.senseicoder.weatherwatcher.features.drawer.settings.SettingsFragment"
        android:label="@string/settings_fragment"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/blankFragment"
        android:name="com.senseicoder.weatherwatcher.features.initial.BlankFragment"
        android:label="fragment_blank"
        tools:layout="@layout/fragment_blank" >
        <action
            android:id="@+id/action_blankFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/homeFragment" />
    </fragment>
</navigation>